# verus

.github/workflows/: ci.yml
dependencies/prettyplease/src/: expr.rs
dependencies/smt-scope-lib/: Cargo.toml
dependencies/smt-scope-lib/src/: display_with.rs  error.rs
dependencies/smt-scope-lib/src/analysis/: cdcl.rs  dependencies.rs  mod.rs  problem_behaviour.rs
dependencies/smt-scope-lib/src/analysis/graph/: raw.rs
dependencies/smt-scope-lib/src/analysis/graph/analysis/: cdcl.rs  next_nodes.rs
dependencies/smt-scope-lib/src/analysis/graph/analysis/matching_loop/: explain.rs  mod.rs  node.rs  signature.rs
dependencies/smt-scope-lib/src/items/: cdcl.rs  enode.rs  equality.rs  idx.rs  inst.rs  mod.rs  proof.rs  term.rs  theory.rs
dependencies/smt-scope-lib/src/mem_dbg/: mod.rs  utils.rs
dependencies/smt-scope-lib/src/parsers/z3/: blame.rs  bugs.rs  cdcl.rs  egraph.rs  inst.rs  inter_line.rs  mod.rs  parse.rs  smt2.rs  stack.rs  synthetic.rs  terms.rs  theory.rs  z3parser.rs
dependencies/smt-scope-lib/tests/: smt_verifiers.rs  test_smtlib.rs
dependencies/smt-scope-lib/tests/common/: mod.rs
dependencies/syn/: syn.json
dependencies/syn/src/: classify.rs  expr.rs  fixup.rs  lib.rs  precedence.rs  stmt.rs  token.rs  verus.rs
source/: .gitignore  Cargo.toml  hi.rs  trace-output.smt2
source/air/: Cargo.toml
source/air/src/: ast.rs  block_to_assert.rs  closure.rs  context.rs  focus.rs  handle_here.rs  lib.rs  main.rs  parser.rs  printer.rs  smt_verify.rs  tracer.rs  typecheck.rs  var_to_const.rs  visitor.rs
source/builtin/src/: lib.rs
source/builtin_macros/src/: syntax.rs
source/docs/internal/: mutref.rs
source/rust_verify/example/: basic_failure.rs  here.rs  mergesort.rs
source/rust_verify/src/: buckets.rs  config.rs  context.rs  driver.rs  erase.rs  fn_call_to_vir.rs  lib.rs  lifetime.rs  lifetime_ast.rs  lifetime_emit.rs  lifetime_generate.rs  lifetime_resolve.rs  main.rs  rust_to_vir_base.rs  rust_to_vir_expr.rs  verifier.rs  verus_items.rs
source/rust_verify_test/tests/: refs.rs
source/tools/minimize/: Cargo.toml  README.md
source/vir/src/: ast.rs  ast_simplify.rs  ast_to_sst.rs  ast_to_sst_crate.rs  ast_util.rs  ast_visitor.rs  bitvector_to_air.rs  check_ast_flavor.rs  check_here.rs  context.rs  (+21 more)
source/vstd/: seq_lib.rs
(+8 files in other folders)
