[package]
name = "smt-scope"
version = "0.1.3"
edition = "2021"
resolver = "2"
# authors = ["Viper Team <smtscope_developers@sympa.ethz.ch>"]
license = "Apache-2.0"
description = "A library for parsing and analysing SMT traces."
repository = "https://github.com/viperproject/smt-scope"
readme = "../README.md"
keywords = ["trace", "smt", "z3", "performance", "axiom-profiler"]
categories = ["parser-implementations", "development-tools", "development-tools::profiling", "development-tools::debugging", "development-tools::testing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "smt-scope"
required-features = ["analysis", "display"]

[[bin]]
name = "z3-scope"
required-features = ["analysis", "display"]

[dependencies]
# Collections and useful types
typed-index-collections = "3.1"
fxhash = "0.2"
lasso = "0.7"
nonmax = "0.5"
either = "1.13"
num = "0.4"
bitmask-enum = "2.2.5"
# Parsing and instrumenting
futures = "0.3"
semver = "1.0"
wasm-timer = "0.2"
mem_dbg = { version = "0.2.4", features = ["std", "derive"], default-features = false, optional = true }
# Analysis
petgraph = "0.6.4"
# Printing
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0"
regex = { version = "1.10", optional = true }
ammonia = { version = "4.0.0", optional = true }
# Convenient macros
duplicate = "1.0"
strum = { version = "0.26", features = ["derive"] }
# For the command line interface
clap = { version = "4.5.4", features = ["derive"] }
tempfile = "3"
# For `debug_assertions` builds which are used for testing
cap = { version = "0.1.2", optional = true }

[dev-dependencies]
memory-stats = "1.1.0"
rand = "0.8"
assert_cmd = "2.0.16"
smt-scope = { path = ".", features = ["mem_dbg", "serde"] }

[features]
default = ["display", "analysis"]
display = ["dep:regex"]
display_html = ["dep:ammonia"]
analysis = []
mem_dbg = ["dep:mem_dbg", "dep:cap"]
serde = ["lasso/serialize", "nonmax/serde", "typed-index-collections/serde-std", "num/serde", "petgraph/serde-1"]
# Feature to enable the integration test that runs on all smt2 files in
# smt-logs. Disabled by default.
test_verifiers = []
